# pipecat-quickstart

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  bot.py  copy_desktop_files.sh  env.example  fragment_guard.py  pyproject.toml  requirements.txt
.github/workflows/: build-dockerhub.yml
plant/: __init__.py  metrics_client.py  mock_stream.py  state.py
